ops/kubernetes/base/demo-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo
spec:
  type: LoadBalancer
  selector:
    app: springboot-k8s
    env: dev
  ports:
    - name: http
      port: 80
      targetPort: 8080
